# HySerial

./: .gitignore  CMakeLists.txt
.github/workflows/: test.yml
cmake/: FindModules.cmake  HySerialConfig.cmake.in  HySerialInstall.cmake
cmake/Modules/: FindLiburing.cmake  FindTbb.cmake  FindUnorderedDense.cmake
examples/basic/: CMakeLists.txt  main.cpp
include/HySerial/: HySerial.hpp  Stats.hpp
include/HySerial/Builder/: Builder.hpp
include/HySerial/Interface/: Config.hpp  Interface.hpp  UringManager.hpp
include/HySerial/Socket/: Socket.hpp
include/HySerial/Util/: Error.hpp  SpinLock.hpp
src/: CMakeLists.txt
src/Interface/: Interface.cpp  UringManager.cpp
src/Socket/: Socket.cpp
tests/: CMakeLists.txt  benchmark_serial_app.cpp  test_serial_app.cpp
tests/python/: test_serial.py
